feat: minor changes on backend and front-end creation